--- a/src/main/api/farragut/v1.yml
+++ b/src/main/api/farragut/v1.yml
@@ -11,10 +11,10 @@ paths:
       operationId: getCompanies
       tags:
         - company
-      description: Retrieves a list of all companies.
+      description: Retrieves a paginated list of all companies.
       responses:
         200:
-          description: A list of companies
+          description: A page of companies
           content:
             application/json:
               schema:
