--- a/src/main/api/farragut/v1.yml
+++ b/src/main/api/farragut/v1.yml
@@ -2,6 +2,11 @@ openapi: 3.0.3
 info:
   title: Farragut Web Application API
   version: 1.0.0
+servers:
+  - url: /api
+    description: Local server
+  - url: https://farragut.avereon.com/api
+    description: Production server
 
 paths:
   /camp:
