--- a/src/main/api/farragut/v1.yml
+++ b/src/main/api/farragut/v1.yml
@@ -140,35 +140,41 @@ paths:
               schema:
                 $ref: "#/components/schemas/Company"
 
-  /api/oauth/login:
+  /api/auth/login:
     post:
       summary: Login a user
       operationId: login
       tags:
-        - authentication
+        - auth
       description: Pass user credentials in the request payload to authenticate a 
         user. If authenticated this will return signed JWT that the user can use
         for subsequent calls.
+      requestBody:
+        content:
+          text/plain:
+            schema:
+              type: string
+              example: username=user@example.com&password=1234luggage
       responses:
         200:
           description: The signed JWT
+          content:
+            text/plain:
+              schema:
+                type: string
+                format: jwt
+                example: xxxxx.yyyyy.zzzzz
 
-  /api/oauth/logout:
+  /api/auth/logout:
     post:
       summary: Logout a user
       operationId: logout
       tags:
-        - authentication
+        - auth
       description: Logout the authenticated user.
       responses:
         200:
           description: This endpoint will always return 200, regardless.
-
-#  grant_type=password
-#  &username=user@example.com
-#  &password=1234luggage
-#  &client_id=xxxxxxxxxx
-#  &client_secret=xxxxxxxxxx
 
 components:
   schemas:
