Add authentication API support with login functionality
Introduce `AuthController` to handle login and logout operations, including a placeholder implementation for user authentication. Enable unauthenticated access to POST `/api/auth/**` endpoints and adjust related tests. Update API specification to reflect changes.

--- a/src/main/api/farragut/v1.yml
+++ b/src/main/api/farragut/v1.yml
@@ -134,11 +134,11 @@ paths:
             type: string
       responses:
         200:
-          description: The company requested
+          description: The person requested
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Company"
+                $ref: "#/components/schemas/Person"
 
   /api/auth/login:
     post:
